--- a/week1.html
+++ b/week1.html
@@ -2,13 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>ИИЯМС</title>
-        <link href="style.css" rel="stylesheet">
+        <title>Неделя 1</title>
     </head>
     <body>
         <header>
         <img src="gerbtspu118.png">
-        <h1>ИИЯМС</h1>
+        <h1>Неделя 1</h1>
         </header>
         <div>
             <nav>
@@ -20,11 +19,7 @@
                 </ul>
             </nav>
             <main>
-                <p>Я учусь в <a href="https://www.tspu.edu.ru">ТГПУ</a></p>
-                <form action="https://www.google.com/search" method="get">
-                    <input type="text" name="q">
-                    <input type="submit" value="Искать">
-                </form>
+                <h2>немецкий язык</h2>
             </main>
         </div>
     </body>
