--- a/week0.html
+++ b/week0.html
@@ -14,6 +14,8 @@
                 <ul>
                    <li><a href="index.html">ИИЯМС</a></li>
                    <li><a href="week0.html">Неделя 0</a></li>
+                   <li><a href="week1.html">Неделя 1</a></li>
+                   <li><a href="week2.html">Неделя 2</a></li>
                 </ul>
             </nav>
             <main>
