--- a/week0.html
+++ b/week0.html
@@ -2,24 +2,31 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Неделя 0</title>
+        <title>Манчкин</title>
     </head>
     <body>
         <header>
-        <img src="gerbtspu118.png">
-        <h1>Неделя 0</h1>
+        <h1>Манчкин</h1>
+        <main>
+        <img src="https://www.purina.ru/sites/purina.ru/files/2020-08/manchkin-1.jpg">
+        <p>
+        В 1991 году коротконогие кошки с бархатистой плотной шубкой, представленные на выставке в Мэдисон Сквер Гарден, потерпели полное фиаско. Карликовый рост посчитали дефектом, однако, после того как учёными было доказано, что короткие ноги – это естественный генетический признак, порода манчкин была признана официально.
+
+Милые котята манчкинов способны растопить сердце любого. Взрослые кошки демонстрируют отменное здоровье на протяжении всей жизни, а живут они 15-16 лет.
+
+Представители этой породы – прекрасные модели для эффектных фотосессий. Особый интерес вызывают кошки с шерстью цвета шоколада. Окрас трёхцветных манчкинов полностью лишён какой-либо симметрии, но на очарование этих кошек подобный «диссонанс» никак не повлиял.
+    </p>
+         </main>
         </header>
         <div>
             <nav>
                 <ul>
-                   <li><a href="index.html">ИИЯМС</a></li>
-                   <li><a href="week0.html">Неделя 0</a></li>
-                   <li><a href="week1.html">Неделя 1</a></li>
-                   <li><a href="week2.html">Неделя 2</a></li>
+                   <li><a href="index.html">ТОП-3 самых красивых кошек в мире</a></li>
+                   <li><a href="week0.html">1. Манчкин</a></li>
+                   <li><a href="week1.html">2. Бирманская кошка</a></li>
+                   <li><a href="week2.html">3. Бенгальская кошка</a></li>
                 </ul>
             </nav>
-            <main>
-                <h2>английский язык</h2>
             </main>
         </div>
     </body>
