--- a/week1.html
+++ b/week1.html
@@ -2,25 +2,36 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Неделя 1</title>
+        <title>Бирманская кошка</title>
     </head>
     <body>
         <header>
-        <img src="gerbtspu118.png">
-        <h1>Неделя 1</h1>
+        <h1>Бирманская кошка</h1>
+        <main>
+            <img src="https://www.purina.ru/sites/purina.ru/files/2020-08/birman-1.jpg">
+            <p>
+         Пушистая красотка с сапфировыми глазами, густой шерстью и белыми лапками – это описание бирманской кошки. История происхождения породы овеяна красивыми легендами. До сих пор неизвестно, какие животные были родоначальниками породы. По окрасу бирманец похож на сиамскую кошку, но по характеру – его полная противоположность. Спокойные, любознательные животные не стесняются выражать свою любовь к хозяевам и в то же время, как истинные аристократы, не будут навязывать своё общество, если люди заняты и не могут уделить им внимания.
+
+
+У бирманцев есть характерная особенность окраса – на тёмных лапах чётко очерчены линии белых туфелек. Их отсутствие считается дефектом и не позволяет признать кошку породистой. Классическое сочетание цветов окраса – светло-бежевый и шоколадно-коричневый.
+
+
+Густая пушистая шерсть – гордость бирманских кошек, но людям, страдающим аллергией, лучше отказаться от этой породы. Жизнь в одном доме с таким животным может стать причиной серьёзных проблем со здоровьем.
+
+
+Если медицинских противопоказаний нет, то бирманец непременно станет любимцем всей семьи. Однако оставлять с ним маленьких детей нежелательно. Несмотря на доброту и спокойный нрав они вполне могут выпустить когти, если ребёнок будет слишком настойчиво вовлекать их в свои игры.
+    </p>
+        </main>
         </header>
         <div>
             <nav>
                 <ul>
-                   <li><a href="index.html">ИИЯМС</a></li>
-                   <li><a href="week0.html">Неделя 0</a></li>
-                   <li><a href="week1.html">Неделя 1</a></li>
-                   <li><a href="week2.html">Неделя 2</a></li>
+                  <li><a href="index.html">ТОП-3 самых красивых кошек в мире</a></li>
+                   <li><a href="week0.html">1. Манчкин</a></li>
+                   <li><a href="week1.html">2. Бирманская кошка</a></li>
+                   <li><a href="week2.html">3. Бенгальская кошка</a></li>
                 </ul>
             </nav>
-            <main>
-                <h2>немецкий язык</h2>
-            </main>
         </div>
     </body>
 </html>
