--- a/week2.html
+++ b/week2.html
@@ -2,25 +2,29 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Неделя 2</title>
+        <title>Бенгальская кошка</title>
     </head>
     <body>
         <header>
-        <img src="gerbtspu118.png">
-        <h1>Неделя 2</h1>
+        <h1>Бенгальская кошка</h1>
+        <main>
+            <img src="https://www.purina.ru/sites/purina.ru/files/2020-08/bengal-3.jpg">
+            <p>
+                Умный, послушный и игривый домашний мини-леопард – это портрет бенгальской кошки. Благодаря характерному окрасу бенгала не спутаешь ни с одной другой породой. От дикого животного он унаследовал гибкое мускулистое тело и проворность, а причудливые узоры – результат многолетних трудов селекционеров. Среди представителей породы встречаются кошки с классическим и мраморным окрасами.
+
+При определении соответствия стандарту оцениваются не только внешние данные, но и темперамент. В поведении животного доминируют повадки дикого зверя, поэтому хозяевам не стоит надеяться на покладистость и спокойный нрав домашнего питомца. Бенгалам жизненно необходимо большое пространство, наличие различных препятствий, чтобы иметь возможность поддерживать тело в тонусе. Лишённые возможности реализовывать природные инстинкты, кошки становятся болезненными, могут возникнуть проблемы с воспитанием.
+            </p>
+        </main>
         </header>
         <div>
             <nav>
                 <ul>
-                   <li><a href="index.html">ИИЯМС</a></li>
-                   <li><a href="week0.html">Неделя 0</a></li>
-                   <li><a href="week1.html">Неделя 1</a></li>
-                   <li><a href="week2.html">Неделя 2</a></li>
+                   <li><a href="index.html">ТОП-3 самых красивых кошек в мире</a></li>
+                   <li><a href="week0.html">1. Манчкин</a></li>
+                   <li><a href="week1.html">2. Бирманская кошка</a></li>
+                   <li><a href="week2.html">3. Бенгальская кошка</a></li>
                 </ul>
             </nav>
-            <main>
-                <h2>китайский язык</h2>
-            </main>
         </div>
     </body>
 </html>
