--- a/index.html
+++ b/index.html
@@ -2,25 +2,24 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>ИИЯМС</title>
+        <title>Кошки</title>
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
         <header>
-        <img src="gerbtspu118.png">
-        <h1>ИИЯМС</h1>
+        <img src="https://i.pinimg.com/originals/3a/30/e4/3a30e4c6f3b403360cc86990ce5be431.gif">
+        <h1>Фотографии самых красивых кошек в мире</h1>
         </header>
         <div>
             <nav>
                 <ul>
-                   <li><a href="index.html">ИИЯМС</a></li>
-                   <li><a href="week0.html">Неделя 0</a></li>
-                   <li><a href="week1.html">Неделя 1</a></li>
-                   <li><a href="week2.html">Неделя 2</a></li>
+                   <li><a href="index.html">ТОП-3 самых красивых кошек в мире</a></li>
+                   <li><a href="week0.html">1. Манчкин</a></li>
+                   <li><a href="week1.html">2. Бирманская кошка</a></li>
+                   <li><a href="week2.html">3. Бенгальская кошка</a></li>
                 </ul>
             </nav>
             <main>
-                <p>Я учусь в <a href="https://www.tspu.edu.ru">ТГПУ</a></p>
                 <form action="https://www.google.com/search" method="get">
                     <input type="text" name="q">
                     <input type="submit" value="Искать">
