--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
         </header>
         <div>
             <nav>
-                <ul>
+                <ol>
                    <li><a href="index.html">ТОП-3 самых красивых кошек в мире</a></li>
-                   <li><a href="week0.html">1. Манчкин</a></li>
-                   <li><a href="week1.html">2. Бирманская кошка</a></li>
-                   <li><a href="week2.html">3. Бенгальская кошка</a></li>
-                </ul>
+                   <li><a href="week0.html">Манчкин</a></li>
+                   <li><a href="week1.html">Бирманская кошка</a></li>
+                   <li><a href="week2.html">Бенгальская кошка</a></li>
+                   <li><a href="./eight/eight.html">Игра в восьмерки</a></li>
+                </ol>
             </nav>
             <main>
                 <form action="https://www.google.com/search" method="get">
